<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>world.convex</groupId>
	<artifactId>convex</artifactId>
	<version>0.7.16-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>Convex Parent</name>
	<description>Parent POM used to build core Convex modules.</description>
	<url>https://convex.world</url>

	<modules>
		<module>convex-core</module>
		<module>convex-cli</module>
		<module>convex-gui</module>
		<module>convex-peer</module>
		<module>convex-benchmarks</module>
		<module>convex-observer</module>
		<module>convex-java</module>
		<module>convex-restapi</module>
		<module>convex-sodium</module>
		<module>convex-integration</module>
	</modules>

	<properties>
		<maven.compiler.release>21</maven.compiler.release>
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<logback.version>1.5.12</logback.version>
		<jmh.version>1.37</jmh.version>
		<junit.version>5.11.3</junit.version>
		<slf4j.version>2.0.16</slf4j.version>
		<hc.version>5.4.1</hc.version>
		<convex.version>${project.version}</convex.version>
		<!--Freeze this for reproducible builds. -->
		<project.build.outputTimestamp>2024-12-06T13:13:13Z</project.build.outputTimestamp>
		<argLine>
			--add-opens=java.base/java.util=ALL-UNNAMED
		</argLine>
	</properties>

	<licenses>
		<license>
			<name>Convex Public License</name>
			<url>https://github.com/Convex-Dev/convex/blob/master/LICENSE.md</url>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>Mike Anderson</name>
			<email>mike@convex.world</email>
			<organization>Convex Foundation</organization>
			<organizationUrl>https://convex.world</organizationUrl>
		</developer>
	</developers>

	<scm>
		<connection>scm:git:git://github.com/Convex-Dev/convex.git</connection>
		<developerConnection>scm:git:ssh://github.com:Convex-Dev/convex.git</developerConnection>
		<url>https://github.com/Convex-Dev/convex.git</url>
	</scm>

	<distributionManagement>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
	</distributionManagement>

	<profiles>
		<profile>
			<id>release</id>
			<activation>
				<property>
					<name>performRelease</name>
					<value>true</value>
				</property>
			</activation>
			<build>
				<plugins>
					<!-- This adds GPG signing for all artifacts -->
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>3.2.6</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>


				</plugins>
			</build>
		</profile>
	</profiles>

	<build>
		<plugins>
			<!-- Use this to require a minimum Maven version -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>3.5.0</version>
				<executions>
					<execution>
						<id>enforce-maven</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireMavenVersion>
									<version>3.7</version>
								</requireMavenVersion>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.sonatype.plugins</groupId>
				<artifactId>nexus-staging-maven-plugin</artifactId>
				<version>1.7.0</version>
				<extensions>true</extensions>
				<configuration>
					<serverId>ossrh</serverId>
					<nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
					<!-- Set to true for auto release -->
					<autoReleaseAfterClose>true</autoReleaseAfterClose>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.cyclonedx</groupId>
				<artifactId>cyclonedx-maven-plugin</artifactId>
				<version>2.8.1</version>
				<executions>
					<execution>
						<phase>deploy</phase>
						<goals>
							<goal>makeAggregateBom</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<projectType>library</projectType>
					<schemaVersion>1.4</schemaVersion>
					<includeBomSerialNumber>true</includeBomSerialNumber>
					<includeCompileScope>true</includeCompileScope>
					<includeProvidedScope>true</includeProvidedScope>
					<includeRuntimeScope>true</includeRuntimeScope>
					<includeSystemScope>true</includeSystemScope>
					<includeTestScope>false</includeTestScope>
					<includeLicenseText>false</includeLicenseText>
					<outputReactorProjects>true</outputReactorProjects>
					<outputFormat>json</outputFormat>
					<outputName>CycloneDX-Sbom</outputName>
					<verbose>false</verbose>
				</configuration>
			</plugin>
		</plugins>
		
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>3.4.2</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.13.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>3.5.0</version>
				</plugin>
				<plugin>
                	<groupId>org.apache.maven.plugins</groupId>
                	<artifactId>maven-resources-plugin</artifactId>
                	<version>3.2.0</version>
            	</plugin>

				<!-- This adds sources -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>3.3.1</version>
					<executions>
						<execution>
							<id>attach-sources</id>
							<goals>
								<goal>jar-no-fork</goal>
							</goals>
						</execution>
					</executions>
				</plugin>

				<!-- This generates JavaDocs -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-javadoc-plugin</artifactId>
					<version>3.10.0</version>
					<configuration>
						<doclint>syntax</doclint>
						<quiet />
					</configuration>
					<executions>
						<execution>
							<id>attach-javadocs</id>
							<goals>
								<goal>jar</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
</project>
